Corrected Overflow
Applied hidden Overflow to html, body

--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ backgrund/*reference Hex values*/
     color: #6B818C;
 }
 
-body {
+html, body {
     overflow-x: hidden;
     background-color: #6B818C;
 }
